<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.lmx.lab1.MainActivity"
    tools:layout_editor_absoluteY="81dp"
    tools:layout_editor_absoluteX="0dp">
    <!--android:id视图的唯一标识符，从 XML 里引用资源对象时，必须使用 @ 符号,
    + 号只在第一次定义一个资源 ID 的时候需要，即创建
    android:layout_width 和 android:layout_height，应使用 "wrap_content"，保证视图只占据内容大小的空间，如果使用match_parent会布满整个屏幕-->

    <!--标题字体大小 20sp，与顶部距离 20dp，居中-->
    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:textColor="@color/colorblack"
        android:text="@string/title_name"
        android:textSize="20sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <!--图片与标题的间距为 20dp，居中-->
    <ImageView
        android:id="@+id/imagesysu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@mipmap/sysu"
        android:contentDescription="@string/content_description"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/title"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <!--输入框整体距屏幕右边间距 20dp，上下两栏间距 20dp，内容字体大小 18sp
    学号对应的 EditText 只能输入数字，密码对应的 EditText 输入方式为密码-->
    <TextView
        android:id="@+id/studentid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:textColor="@color/colorblack"
        android:text="@string/id_name"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imagesysu"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginStart="20dp" />

    <EditText
        android:id="@+id/studentid_input"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:inputType="number"
        android:hint="@string/inputid"
        android:layout_marginTop="20dp"
        app:layout_constraintLeft_toRightOf="@id/studentid"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imagesysu"
        app:layout_constraintBaseline_toBaselineOf="@id/studentid"
        android:layout_marginRight="20dp"
        android:layout_marginEnd="20dp" />

    <TextView
        android:id="@+id/password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:textColor="@color/colorblack"
        android:text="@string/password"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/studentid"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginStart="20dp"
         />

    <EditText
        android:id="@+id/passwordinput"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:hint="@string/inputpassword"
        android:layout_marginTop="20dp"
        app:layout_constraintLeft_toRightOf="@id/password"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/studentid_input"
        app:layout_constraintBaseline_toBaselineOf="@id/password"
        android:layout_marginRight="20dp"
        android:layout_marginEnd="20dp"
        />

    <!---两个单选按钮整体居中，字体大小 18sp，间距 10dp，默认选中的按钮为第一个-->
    <RadioGroup
        android:id="@+id/groups"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/password">
        <RadioButton
            android:id="@+id/studentbutton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/student"
            android:textSize="18sp" />
        <RadioButton
            android:id="@+id/teacherbutton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/teacher"
            android:textSize="18sp"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"
            app:layout_constraintLeft_toRightOf="@id/studentbutton" />
    </RadioGroup>

    <android.support.constraint.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/guideline"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

    <Button
        android:id="@+id/login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:textSize="18sp"
        android:textColor="@color/colorwhite"
        android:background="@drawable/buttonshape"
        app:layout_constraintTop_toBottomOf="@id/groups"
        android:layout_marginTop="20dp"
        app:layout_constraintRight_toLeftOf="@id/guideline"
        android:layout_marginRight="5dp"
        android:layout_marginEnd="5dp"/>

    <Button
        android:id="@+id/register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:textSize="18sp"
        android:textColor="@color/colorwhite"
        android:background="@drawable/buttonshape"
        android:layout_marginLeft="5dp"
        android:layout_marginStart="5dp"
        app:layout_constraintLeft_toLeftOf="@id/guideline"
        app:layout_constraintBaseline_toBaselineOf="@id/login" />

</android.support.constraint.ConstraintLayout>
